--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,209 +1,230 @@
-2.0ß
-- Fixed /home permissions checks. commandbook.home.other to teleport anybody to a home owned by a user who is not the sender commandbook.home.teleport.other to teleport other users to homes.
-- Add permissions to exempt kick/ban/mute for specific players - see wiki for detairs
-- Created PlayerWhoisEvent, components can add information to the whois output by listening to it. Ban and God components use it currently.
-- Added enchantment support to item operations. Closes #986
-- Added more information to /whois and made it work on offline players too.
-- Added -s flag to kick/ban commands to override broadcastKicks/Bans settings and not broadcast.
-- Fixed playertime -r not working for other players.
-- Added the ability for /midi and /intro to affect other players.
-- Require confirmation to override warps. The permission commandbook.warp.set.override is required to replace existing warps created by other users. The command to confirm actions is /confirm and requires no permission to use.
-- Added a configuration migrator to convert pre-1.8 configurations to the new format
-- Use the new Bukkit events system
-- Added a /cmdbook help|doc command to provide ingame help for components
-- Added low-priority-command-registration setting - see configuration for more details
-- Only check .other permissions if any of the involved players are not the sender
-- Added /help command that provides help from a user-defined file and about commands (with the -c flag)
-- Added -s flag (silent) to /warp and /tp.
-- Removed redundant message when teleporting other player(s).
-- Refactored bans system to use a CSV storage format, allow IP bans, and allow temporary bans.
-- Allow using display names when looking up names.
-- Adding the old /cannon command, that was replaced with firebarrage. This is the one that shoots the Fireball at the player, versus away from him.
-- Moved /heal, /stack, /locate, /slay, and /god from WorldGuard
-- Improve handling of warps stored in unloaded worlds. This fixes #701 (well it should, but I don't have a fancy multiworld setup to test with).
-- Added twitter-style pm's, using the @name syntax
-- /take command to remove items from a player's inventory
-- /freeze component
-- Added support for loading components from a directory of class files.
-- Added .other permission to /return
-- Allow return to be used with a player different than the sender.
-- Fixed /pos command to work correctly on other players. Thanks AgentME!
-- Fixed /compass's permissions. Thanks gicode!
-- Converted CommandBook over to using a component-based system, similar in design to the one used in sk's server plugin (see more about that at http://www.sk89q.com/2011/10/how-i-stay-sane-while-updating-my-minecraft-server/)
-- Fixed coloring of /gamemode
-- Fixed fireball + arrow  blocking in WorldGuard by setting shooter of projectiles.
+2.1:
+  - Updated sessions framework to allow it to handle multiple types of sessions (for developers!)
+  - Updated freeze component to be more efficient
+  - Added a component to handle command cooldowns (config name is cooldowns)
+  - Improve validity checks for twitter-style PM's (format is @name message)
+  - Made auto-god disabled by default.
+  - Removed commandbook.kit permissions check.
+  - Moved uses of CreatureType over to EntityType
+  - Update for 1.2
+  - Make sure that locations from unloaded worlds are saved back to their files
+  - Added a simple script to convert homes from other formats to CommandBook's
+  format. Currently only handles MyHomes and warpz0r databases. (homeconvert.py)
+  - Make sure all accesses of HelpComponent's messages field are lowercased
+  - Add a damage value check to per-item permissions. commandbook.items.<id> allows
+   id with any damage value, commandbook.items.<id>.<damage> allows item <id> with <damage>
+  - Made EntityUtil.matchCreatureType() ignore case when checking creature type names
+  - Have OnlineListComponent use the global use-dsplay-names setting instead of its colored-names one
+  - Set the time lock delay to a default value that is not 0.
+     **Warning**: To avoid issues when using existing installations, change component.time.time-lock.delay to 20 in config.yml
+  - Fix warp loading messages for per-world warps
+
+2.0
+ - Fixed /home permissions checks. commandbook.home.other to teleport anybody to a home owned by a user who is not the sender commandbook.home.teleport.other to teleport other users to homes.
+ - Add permissions to exempt kick/ban/mute for specific players  - see wiki for detairs
+ - Created PlayerWhoisEvent, components can add information to the whois output by listening to it. Ban and God components use it currently.
+ - Added enchantment support to item operations. Closes #986
+ - Added more information to /whois and made it work on offline players too.
+ - Added -s flag to kick/ban commands to override broadcastKicks/Bans settings and not broadcast.
+ - Fixed playertime -r not working for other players.
+ - Added the ability for /midi and /intro to affect other players.
+ - Require confirmation to override warps. The permission commandbook.warp.set.override is required to replace existing warps created by other users. The command to confirm actions is /confirm and requires no permission to use.
+ - Added a configuration migrator to convert pre-1.8 configurations to the new format
+ - Use the new Bukkit events system
+ - Added a /cmdbook help|doc command to provide ingame help for components
+ - Added low-priority-command-registration setting  - see configuration for more details
+ - Only check .other permissions if any of the involved players are not the sender
+ - Added /help command that provides help from a user-defined file and about commands (with the -c flag)
+ - Added -s flag (silent) to /warp and /tp.
+ - Removed redundant message when teleporting other player(s).
+ - Refactored bans system to use a CSV storage format, allow IP bans, and allow temporary bans.
+ - Allow using display names when looking up names.
+ - Adding the old /cannon command, that was replaced with firebarrage. This is the one that shoots the Fireball at the player, versus away from him.
+ - Moved /heal, /stack, /locate, /slay, and /god from WorldGuard
+ - Improve handling of warps stored in unloaded worlds. This fixes #701 (well it should, but I don't have a fancy multiworld setup to test with).
+ - Added twitter-style pm's, using the @name syntax
+ - /take command to remove items from a player's inventory
+ - /freeze component
+ - Added support for loading components from a directory of class files.
+ - Added .other permission to /return
+ - Allow return to be used with a player different than the sender.
+ - Fixed /pos command to work correctly on other players. Thanks AgentME!
+ - Fixed /compass's permissions. Thanks gicode!
+ - Converted CommandBook over to using a component-based system, similar in design to the one used in sk's server plugin (see more about that at http://www.sk89q.com/2011/10/how-i-stay-sane-while-updating-my-minecraft-server/)
+ - Fixed coloring of /gamemode
+ - Fixed fireball + arrow  blocking in WorldGuard by setting shooter of projectiles.
 
 Thanks to contributions by: gicode, AgentMe, DarkArc, famerdave, and mrapple
 
 
 1.7
-- Added /gamemode command to change player game modes
-- Added commands to list and remove homes and warps
-- Updated for 1.0.1 changes
-- Allow spawning baby animals
+ - Added /gamemode command to change player game modes
+ - Added commands to list and remove homes and warps
+ - Updated for 1.0.1 changes
+ - Allow spawning baby animals
 
-- Improved support for non-player and non-console command senders
-- Improved error handling
-- Cleaned output of several commands
-- Changed some unnecessary logger warnings to logger info's
+ - Improved support for non-player and non-console command senders
+ - Improved error handling
+ - Cleaned output of several commands
+ - Changed some unnecessary logger warnings to logger info's
 
-- Fixed configuration generation for Windows users
-- Fixed cross-world teleport permissions
-- Fixed thread leak in the MIDI handler
-- Fixed giving items with a damage value greater than 255
+ - Fixed configuration generation for Windows users
+ - Fixed cross-world teleport permissions
+ - Fixed thread leak in the MIDI handler
+ - Fixed giving items with a damage value greater than 255
 
 Thanks to contributions by: wizjany, Turtle9598, and balr0g (aka armed_troop)
 
 1.6:
-- Added basic warps and homes support
-- Added option to broadcast kicks and bans
-- Added %cmd:<command>% macro, replacing output of the command (run by console)
-- Added /firebarrage command (like arrow /barrage, with fireballs)
-- Added /afk command to warn players that you are away when messaging you
-- Added /biome command to output the current biome you are in
-- Added /playertime command to set a player's percieved time
-- Spawnmob command now supports setting additional data on several mobs
+ - Added basic warps and homes support
+ - Added option to broadcast kicks and bans
+ - Added %cmd:<command>% macro, replacing output of the command (run by console)
+ - Added /firebarrage command (like arrow /barrage, with fireballs)
+ - Added /afk command to warn players that you are away when messaging you
+ - Added /biome command to output the current biome you are in
+ - Added /playertime command to set a player's percieved time
+ - Spawnmob command now supports setting additional data on several mobs
     (saddled pigs, tamed wolves, colored sheep, etc)
-- Spawnmob command now supports riders
-- Custom items can now be used with the /thor command (setting in config)
-- Any command that takes a location can now be pointed to a #warp or #home
-- Item commands now obey max stack sizes (-o to override)
-- Time locks can now be put on a configurable delay if you are having trouble
+ - Spawnmob command now supports riders
+ - Custom items can now be used with the /thor command (setting in config)
+ - Any command that takes a location can now be pointed to a #warp or #home
+ - Item commands now obey max stack sizes (-o to override)
+ - Time locks can now be put on a configurable delay if you are having trouble
     with redstone or water physics
-- Teleportation commands will also check the target world if the permissions
+ - Teleportation commands will also check the target world if the permissions
     provider support multi-world permissions
-- The /return command will now handle all player teleports, including death
-- Fixed exact respawn issues with beds and first join (hopefully)
-- Fixed items not showing up in inventory after using give commands
+ - The /return command will now handle all player teleports, including death
+ - Fixed exact respawn issues with beds and first join (hopefully)
+ - Fixed items not showing up in inventory after using give commands
     in certain cases
 Thanks to contributions by:
 wizjany, zml2008, sleaker, famerdave, ivals, TexasGamer, and o0c
 
 1.5.2:
-- Updated for MC 1.6.
-- Added support for commandbook.kit.other as a permission.
-- Added ability to color sheep with /spawnmob (thanks to wizjany).
-- Added current world to whereami (thanks to Richard McCormack).
-- Added compatibility with poorly written server wrappers.
-- Added "disable-midi" configuration. Removed the "no intro.mid" message.
-- Added permission to check time (thanks to wizjany).
-- Fixed unload issue with the JingleNote manager.
-- Fixed thread safety issue with the JingleNote manager.
-- Fixed air being a spawnable item.
+ - Updated for MC 1.6.
+ - Added support for commandbook.kit.other as a permission.
+ - Added ability to color sheep with /spawnmob (thanks to wizjany).
+ - Added current world to whereami (thanks to Richard McCormack).
+ - Added compatibility with poorly written server wrappers.
+ - Added "disable-midi" configuration. Removed the "no intro.mid" message.
+ - Added permission to check time (thanks to wizjany).
+ - Fixed unload issue with the JingleNote manager.
+ - Fixed thread safety issue with the JingleNote manager.
+ - Fixed air being a spawnable item.
 
 1.5.1:
-- Fixed a bug with the JingleNote Manager.
+ - Fixed a bug with the JingleNote Manager.
 
 1.5:
-- Fixed kits dwindling in size.
-- Added kit cooldowns. Put [kitname=#] where # is in seconds.
-- Added /return and /ret to teleport to your last location.
-- Fixed /more not expanding stacks of certain items.
-- Improved the player context error message.
-- Added world arguments to #spawn and x,y,z locations.
+ - Fixed kits dwindling in size.
+ - Added kit cooldowns. Put [kitname=#] where # is in seconds.
+ - Added /return and /ret to teleport to your last location.
+ - Fixed /more not expanding stacks of certain items.
+ - Improved the player context error message.
+ - Added world arguments to #spawn and x,y,z locations.
     Example: /spawnmob Pig 1 0,64,50:#main
-- /time with an integer <= 24 will now assume that the integer represents an
+ - /time with an integer <= 24 will now assume that the integer represents an
     hour, rather than a tick. Ticks can still be specified explicitly
     with *<ticks>.
-- Added time lock setting that lets you lock a world's time on server load.
--  Added online list display options.
-- Brought over the MIDI playing stuff I wrote for my server in February.
+ - Added time lock setting that lets you lock a world's time on server load.
+ - Added online list display options.
+ - Brought over the MIDI playing stuff I wrote for my server in February.
     Tip: MIDI files should not be complex and should not rely on sustained
     notes (as those can't be played in Minecraft correctly). High and low
     notes will not play correctly.
-- New intro music: put intro.mid into plugins/CommandBook to have your server
+ - New intro music: put intro.mid into plugins/CommandBook to have your server
     play a MIDI file when a player joins. Use /intro to replay the music.
-- New /midi and /play to play a MIDI file in a plugins/CommandBook/midi/
+ - New /midi and /play to play a MIDI file in a plugins/CommandBook/midi/
     directory (or midi/ as well).
 
 1.4.3:
-- Added tip about /clear -a when using /clear.
-- Added /clear -s to clear a single slot only.
-- Added item-permissions-only to force using item whitelist permissions.
-- Made /tp print world information if a player's world changed on teleport.
-- Added exact spawn setting (disabled by default). Currently this only
+ - Added tip about /clear -a when using /clear.
+ - Added /clear -s to clear a single slot only.
+ - Added item-permissions-only to force using item whitelist permissions.
+ - Made /tp print world information if a player's world changed on teleport.
+ - Added exact spawn setting (disabled by default). Currently this only
     affects respawn.
-- Added multiple target support to /kick.
-- Added notice about verify-name-format in the console.
+ - Added multiple target support to /kick.
+ - Added notice about verify-name-format in the console.
 
 1.4.2:
-- Fixed permission error in console if op permissions were turned off.
+ - Fixed permission error in console if op permissions were turned off.
 
 1.4.1;
-- Added /spawnmob -p to spawn powered creepers.
-- Added check against Bukkit for item validity too so that if there is a
+ - Added /spawnmob -p to spawn powered creepers.
+ - Added check against Bukkit for item validity too so that if there is a
     Minecraft update, you can use new items without having to necessarily
     update CommandBook.
 
 1.4:
-- Added /call to request a teleport.
-- Added /time -l to lock the time.
-- Added a default item stack size setting.
-- Added /broadcast to broadcast a message in red font (customizable0.
-- Added /more [-i] [-a].
-- Added an option to change the format of /say when console uses it.
-- Added broadcast-changes setting which allows you to disable the time change
+ - Added /call to request a teleport.
+ - Added /time -l to lock the time.
+ - Added a default item stack size setting.
+ - Added /broadcast to broadcast a message in red font (customizable0.
+ - Added /more [-i] [-a].
+ - Added an option to change the format of /say when console uses it.
+ - Added broadcast-changes setting which allows you to disable the time change
     and weather change broadcast messages.
-- Add /mute and /unmute.
-- Changed /msg to reply to the last person (with a 1 second grace).
-- Fixed bans (I think).
-- Fixed permissions not loading (for alternate WEPIF permissions systems).
+ - Add /mute and /unmute.
+ - Changed /msg to reply to the last person (with a 1 second grace).
+ - Fixed bans (I think).
+ - Fixed permissions not loading (for alternate WEPIF permissions systems).
 
 1.3:
-- Updated for MC 1.5.
-- Added /shock to shock someone with thunder.
-- Added /weather to change the weather.
-- Added /thunder to change the thunder state.
-- Added /thor and /unthor to give Thor's hammer.
+ - Updated for MC 1.5.
+ - Added /shock to shock someone with thunder.
+ - Added /weather to change the weather.
+ - Added /thunder to change the thunder state.
+ - Added /thor and /unthor to give Thor's hammer.
 
 1.2.1:
-- Updated for latest Bukkit / 1.4.
+ - Updated for latest Bukkit / 1.4.
 
 1.2:
-- Added new macros: %online%, %players% (list of players), %cname%
+ - Added new macros: %online%, %players% (list of players), %cname%
     (colored player name where applicable), %id% (unadulterated name).
-- Added support for kits with /kit <kit> [target] and /kit to list.
-- Added /kick [target] command.
-- Added a basic flat-file ban system. Commands: /ban, /unban, /isbanned,
+ - Added support for kits with /kit <kit> [target] and /kit to list.
+ - Added /kick [target] command.
+ - Added a basic flat-file ban system. Commands: /ban, /unban, /isbanned,
     /bans load, and /bans save.
-- Added /spawnmob [-d] [-i] [-r] <mob> [count] [location].
-- Added /whois to query information about a player.
-- Added /barrage [-s] [target] to send a barrage of arrows from a player.
-- Added /rocket [-s] [-h] [target] to rocket a player.
-- Added /slap [-s] [-h|-v] [-d] [target] to slap a player.
-- Added console support to /whereami and /compass.
-- Added /me and /say. This allows you to properly apply permissions to these
+ - Added /spawnmob [-d] [-i] [-r] <mob> [count] [location].
+ - Added /whois to query information about a player.
+ - Added /barrage [-s] [target] to send a barrage of arrows from a player.
+ - Added /rocket [-s] [-h] [target] to rocket a player.
+ - Added /slap [-s] [-h|-v] [-d] [target] to slap a player.
+ - Added console support to /whereami and /compass.
+ - Added /me and /say. This allows you to properly apply permissions to these
     commands, in additional to support from the console.
-- Added /tell as an alias of /msg.
-- Added /put and /place to teleport players to a target block.
-- Added #target as a special location code to select the first free spot
+ - Added /tell as an alias of /msg.
+ - Added /put and /place to teleport players to a target block.
+ - Added #target as a special location code to select the first free spot
     at the location that you are looking at.
-- Added /debug info for server information.
-- Added /debug clock to test your internal Minecraft server clock speed to see
+ - Added /debug info for server information.
+ - Added /debug clock to test your internal Minecraft server clock speed to see
     if it's healthy.
-- Added /summon and /s as aliases for /bring.
-- Added op-permissions setting, allowing you to disable giving
+ - Added /summon and /s as aliases for /bring.
+ - Added op-permissions setting, allowing you to disable giving
     ops permissions automatically.
-- Fixed minor +/- 1 second accuracy bug with /time command
+ - Fixed minor +/ - 1 second accuracy bug with /time command
     (thanks to ochristi!).
-- Fixed the lack of item ID sanitization.
-- Fixed NumberFormatException not properly handled.
-- Fixed player matching routine potentially returning empty lists (resulting
+ - Fixed the lack of item ID sanitization.
+ - Fixed NumberFormatException not properly handled.
+ - Fixed player matching routine potentially returning empty lists (resulting
     in odd behavior).
-- Fixed /item having double flag usage information.
-- Fixed /clear not clearing two slots.
-- Fixed item aliases processing.
-- Improved how colored names were handled.
-- Now name displays will use the player's display name. You can disable
+ - Fixed /item having double flag usage information.
+ - Fixed /clear not clearing two slots.
+ - Fixed item aliases processing.
+ - Improved how colored names were handled.
+ - Now name displays will use the player's display name. You can disable
     this with the new 'use-display-names' configuration setting.
 
 1.1:
-**Warning:** Minimum CraftBukkit build is 479.
-- Added item data value aliases for dye, slabs, double slabs and wood.
-- /ping added as requested by Kainzo. This sends back a dummy reply
+ **Warning:** Minimum CraftBukkit build is 479.
+ - Added item data value aliases for dye, slabs, double slabs and wood.
+ - /ping added as requested by Kainzo. This sends back a dummy reply
     so you don't have to spam chat with test messages. No permissions
     are required for its usage.
-- /setspawn [location] added. It uses commandbook.setspawn for permissions.
+ - /setspawn [location] added. It uses commandbook.setspawn for permissions.
 
 1.0:
-- Initial release.
+ - Initial release.
